clusters/arcanis/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: linuxserver/prowlarr:latest
        ports:
        - containerPort: 9696
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        hostPath:
          path: /storage/appdata/prowlarr/config
          type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:latest
        ports:
        - containerPort: 8191
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        hostPath:
          path: /var/lib/flaresolver
          type: DirectoryOrCreate
